--- a/css/homepage2.css
+++ b/css/homepage2.css
@@ -21,10 +21,10 @@ body {
 
 .marspic {
   overflow-x: hidden;
-  margin-bottom: 25px;
+  margin-bottom: 35px;
 }
 
-h1, h2 {
+h1 {
   text-align: center;
 }
 
