--- a/css/homepage2.css
+++ b/css/homepage2.css
@@ -21,7 +21,9 @@ body {
 
 .marspic {
   overflow-x: hidden;
-  margin-bottom: 35px;
+  margin-bottom: 55px;
+  height: 220px;
+  background-image: url('/img/mars_wp_hdr.png');
 }
 
 h1 {
@@ -40,6 +42,7 @@ blockquote {
 figcaption {
   font-size: 1.0em !important;
 }
+
 figure {
   margin-top: 15px;
 }
